# allox

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: architecture.md  development.md  install.md  publishing.md  quickstart.md  template.md  upgrade-policy.md
src/allox/: cli.py
src/allox/assets/project_template/default/: AGENTS.md  CLAUDE.md  GEMINI.md  manifest.json
src/allox/assets/project_template/default/.allox/scripts/: cleanup.py  closeout.py  worktree_setup.py
src/allox/assets/project_template/default/.claude/agents/: code-reviewer.md  plan-critic.md  security-reviewer.md  test-critic.md
src/allox/assets/project_template/default/.codex/: README.md  config.toml
src/allox/assets/project_template/default/PROMPTS/: CODEX_PROJECT_START.md
src/allox/assets/project_template/default/allox/: README.md
src/allox/assets/project_template/default/docs/: ai-workflow.md
src/allox/commands/: __init__.py  doctor.py  new.py  project.py  self_test.py  upgrade.py  version.py
src/allox/core/: __init__.py  assets.py  doctoring.py  hashing.py  layout.py  manifest.py  markers.py  pathing.py  redaction.py  reviews.py  runtime.py  subprocesses.py  templating.py  upgrade.py
tests/: helpers.py  test_cli_doctor.py  test_cli_new.py  test_cli_upgrade.py  test_manifest.py  test_markers.py  test_project_runtime.py  test_redaction.py  test_review_normalization.py  test_self_test_smoke.py  test_subprocesses.py  test_template_rendering.py  test_upgrade_merge.py
(+29 files in other folders)
