[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "allox"
version = "0.1.1"
description = "A reusable Codex-supervised framework for bootstrapping and maintaining AI-native product repositories."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
allox = "allox.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
allox = ["assets/**/*"]
